# omnibench-logger

./: .gitignore  README.md  pyproject.toml
docs/: spec-logger.md  usage-logger.md  usage-prof.md
omnibench.logger/: .README.md.swp  DESCRIPTION  LICENSE  NAMESPACE  README.md
omnibench.logger/R/: emit.R  init.R
omnibench.logger/tests/: testthat.R
omnibench.logger/tests/testthat/: test-emit.R  test-init.R
omnibench_logger/: __init__.py
python/: pyproject.toml
python/obkit/logger/: __init__.py
python/obkit/prof/: __init__.py
python/tests/: test_emit.py  test_init.py
r/obkit/: DESCRIPTION  NAMESPACE
r/obkit/R/: logger.R
r/obkit/tests/: testthat.R
r/obkit/tests/testthat/: test-logger.R
tests/: test_emit.py  test_init.py
