[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omnibench-logger"
version = "0.1.0"
description = "Minimal JSONL lifecycle-event logger for omnibenchmark workflow rules"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
